fix for inline button and form on firefox

--- a/frontend/source/sass/components/_forms.scss
+++ b/frontend/source/sass/components/_forms.scss
@@ -147,24 +147,26 @@ dl.contract-details {
 
 /* search -- inline form + button */
 input[type].form__inline {
-  display: inline-block;
+  height: 40px;
+  display: block;
   margin: 1rem 0;
   float: left;
+  box-sizing: border-box;
   border-right: none;
   &.filter_active {
     padding-top: 0.9rem;
     padding-bottom: 0.9rem;
-    ~ .button,
-    ~ button,
-    ~ input[type=button] {
-      /*padding-top: 1.1rem;*/
-      /*padding-bottom: 1.1rem; // to accommodate extra border*/
-    }
   }
   ~ .button,
   ~ button,
   ~ input[type=button] {
+    height: 40px;
     margin: 1rem 0;
-    display: inline-block;
+    display: block;
+    box-sizing: border-box;
+    float: left;
+    &:last-child {
+      margin-left: 1rem;
+    }
   }
 }
